Templating with underscore.

--- a/js/templates/user/list.html
+++ b/js/templates/user/list.html
@@ -10,7 +10,9 @@
 
 	<div id="container">
 		<div id="menu"></div>
-		<div id="content"></div>
+		<div id="content">
+            <a class="btn"><%= users.get(0).name %></a>
+        </div>
 	</div>
 
 </body>
