--- a/js/templates/project/list.html
+++ b/js/templates/project/list.html
@@ -9,8 +9,14 @@
 <body>
 
 	<div id="container">
-		<div id="menu"></div>
-		<div id="content"></div>
+		<div id="menu"><a href="/index.html">Index</a><br /><a href="#/users">Users</a></div>
+		<div id="content">
+        <ul>
+            <% _.each(projects, function(project){ %>
+                   <li><a href='<%= project.get("name") %>'><%= project.get("name") %></a></li> 
+                <% }); %>
+            </ul>
+        </div>
 	</div>
 
 </body>
